<resources>
    <string name="google_map_api_key">AIzaSyBh7RqwcekrVdGZEiFqcEDma3WVG3BeO3k</string>
    <string name="app_name">HereLKB</string>
    <string name="desc">image</string>
    <string name="action_settings">Settings</string>
    <string name="minimum_password">Please insert 6 digits</string>
    <string name="auth_failed">Authentication Fail!</string>
    <string name="title_activity_authen">AuthenActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="seacrh_here">Seacrh Here</string>
    <string name="search">Search</string>
    <string name="opentime">opentime</string>
    <string name="tel">tel</string>
    <string name="locatename">locatename</string>
    <string name="locatedetail">locatedetail</string>
    <string name="locateaddress">locateaddress</string>
    <string name="locateopentime">locateopentime</string>

    <string name="locatetel">locatetel</string>
    
    <array name="category">
        <item>Restaurants</item>
        <item>Cafe</item>
        <item>Hotel</item>
        <item>Place</item>
    </array>

</resources>
