<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/iconapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/ic_here" />

    <TextView
        android:id="@+id/txt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="-24dp"
        android:text="@string/e_mail"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/txt_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        android:typeface="monospace" />

    <EditText

        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconapp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_action_mail"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:typeface="monospace"
        tools:textSize="18sp" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/login_action"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@color/colorbutton1"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="normal|bold"
        android:typeface="monospace"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/signup_action"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_action"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@color/colorbutton2"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textStyle="normal|bold"
        android:typeface="monospace"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/forgot_pass"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/signup_action"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:background="@color/back"
        android:text="Forgot Password"
        android:textColor="#FFFFFF"
        android:typeface="monospace" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>