<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" />

        <TextView
            android:id="@+id/txt_nameuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iconapp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="213dp"
            android:text="name"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:typeface="monospace" />


        <ImageView
            android:id="@+id/iconapp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="-235dp"
            android:layout_marginTop="-128dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_here"
            tools:layout_width="match_parent" />

        <TextView
            android:id="@+id/txt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconapp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="139dp"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:typeface="monospace" />


        <EditText

            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_search"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/shape_layout"
            android:ems="10"
            android:hint="@string/seacrh_here"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#A3F5F5F5"
            android:typeface="monospace"
            tools:textSize="18sp" />


        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_search"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/editText"
            android:background="@drawable/shape_layout"
            app:srcCompat="@drawable/ic_action_search" />

        <ImageButton
            android:id="@+id/button_transport"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="4dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/shape_layout2"
            app:srcCompat="@drawable/ic_action_transport" />

        <ImageButton
            android:id="@+id/button_emergency"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="4dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@id/button_transport"
            android:background="@drawable/shape_layout3"
            app:srcCompat="@drawable/ic_action_emergency" />
        <ImageButton
            android:id="@+id/button_place"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="4dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@id/button_emergency"
            android:background="@drawable/shape_layout2"
            app:srcCompat="@drawable/ic_action_place" />
        <ImageButton
            android:id="@+id/button_food"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="4dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@id/button_place"
            android:background="@drawable/shape_layout3"
            app:srcCompat="@drawable/ic_action_food" />

        <ImageButton
            android:id="@+id/button_hotel"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_below="@id/toolbar"
            android:layout_marginStart="4dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@id/button_food"
            android:background="@drawable/shape_layout2"
            app:srcCompat="@drawable/ic_action_hotel" />

        <Button
            android:id="@+id/pr_action"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_layout4"
            android:drawableLeft="@drawable/ic_action_send"
            android:drawablePadding="-30dp"
            android:paddingLeft="30dp"
            android:text="Public Relations"
            android:textColor="#FFFFFF"
            android:textStyle="normal|bold"
            android:typeface="monospace"
            tools:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_below="@id/editText"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            tools:itemCount="5"></android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</ScrollView>
